styles/common-template-m.css
/* ... */
.drawer-tab-left, .drawer-tab-right {
  cursor: pointer;
  z-index:2;
  width: 3%;
  height: 100%;
  position:absolute;
  top:0;
}

@media screen and (min-width: 480px) {
  .drawer-tab-left, .drawer-tab-right {
    width: 2%;
  }

  .drawer-tab-right {
    right: 0px;
  }
}

.drawer-tab-left {
  left:0;
  opacity: 0.7;
  background-color: rgba(255, 255, 255, 0.7);
}

.drawer-tab-left:hover {
  background: #ccc;
  opacity: 0.9;
}

.drawer-tab-right {
  right: 5px;
}

.drawer-tab-left i, .drawer-tab-right i {
  font-size: 15px;
  padding:0;
  left:0;
}

.drawer-tab-left i {
  color: #777;
}

.drawer-tab-right i {
  color: #ddd;
  right: 0;
}

.anim-overlay-active .drawer-tab-left {
  opacity: 0;
}

@media screen and (min-width: 820px) {
  .drawer-tab-left i, .drawer-tab-right i {
    font-size: 20px;
  }

  .drawer-tab-right {
    right: 0px;
  }
}

.tradleRules .rule1 {
  font-size:1.5rem;
  padding-bottom:1rem;
}
.socialLinks {
  text-align: center;
/*  background: rgba(255, 255, 255, 0.5);*/
  font-weight: bold;
  min-height:3rem;
}
.socialLinks > a.socialAction {
  display: inline-block;
  font-size: 2rem;
  margin: 1rem 1rem;
  border: 1px solid;
  width: 120px;
  padding: 0.5rem;
  border-radius: 1rem;
  cursor: pointer;
}

.quickstart {
  -webkit-transition: 0.3s ease;
     -moz-transition: 0.3s ease;
      -ms-transition: 0.3s ease;
          transition: 0.3s ease;

  position: relative;
  /*
  background-color: #FF9600;
  */
  background-color: rgba(233, 251, 192, 0.5);
  margin: 1rem 0;
  max-height: 0px;
  overflow: hidden;
  font-size: 15px;
  /*border-radius: 1rem;*/
}

.quickstart ul li {
  list-style: none;
}

.quickstart h2 {
  font-size: 48px;
  text-align: center;
}

.quickstart h3 {
  line-height: 2;
}

.quickstart subtitle {
  font-size: 24px;
  display: block;
  margin-top: 10px;
}

.quickstart i, .buttons i.help {
  -webkit-transition: 0.3s ease;
     -moz-transition: 0.3s ease;
      -ms-transition: 0.3s ease;
          transition: 0.3s ease;

  cursor: pointer;
  opacity: 0;
}

.quickstart .step-current {
  border-bottom: 3px solid;
  color: #009E00;
}

.quickstart .step-complete {
  color: #009E00;
}

.quickstart .step-incomplete {
/*  color: #f00; */
}

.buttons i.help {
  opacity: 1;
  color: #aaa;
  -webkit-transform: scale(1);
     -moz-transform: scale(1);
      -ms-transform: scale(1);
          transform: scale(1);

  float: right;
  margin-right: 4px;
}

.quickstart-active .buttons i.help {
  opacity: 0;
  -webkit-transform: scale(0);
     -moz-transform: scale(0);
      -ms-transform: scale(0);
          transform: scale(0);
}

.quickstart-active .quickstart {
  max-height: 1000px;
  border: 1px solid rgb(150, 184, 201);
}

.quickstart-content {
  padding: 10px;
}

.quickstart-active .quickstart i {
  opacity: 1;
}

.quickstart-options .mini-cta, .quickstart-options li {
  margin-bottom: 10px;
  font-weight: normal;
}

.quickstart .ui-icon-remove {
  position: absolute;
  padding: 5px;
  top: 0;
  right: 0px;
  font-size: 20px;
  color: #555;
}

#resourceViewHolder .hint--top:before,#resourceViewHolder .hint--top:after {
  bottom: 100%;
  left: 5%;
}
#resourceViewHolder .hint--bottom:before,#resourceViewHolder .hint--bottom:after {
  top: 100%;
  left: 50%;
}

#resourceViewHolder .hint--right:before,#resourceViewHolder .hint--right:after {
  left: 20%;
  bottom: 50%;
}

#hpRightPanel.hint--left:before {
  border-left-color: #ffffff;
}
#hpRightPanel.hint:after, #hpRightPanel[data-hint]:after {
  color: #000000;
  background: #ffffff;
}

li.invalid[data-role="fieldcontain"] {
  border: 3px solid red;
  background: rgba(255,0,0,0.2);
}

[data-display="collapsed"] ul {
  display: none;
}

.unfolded[data-display="collapsed"] ul {
  display: inherit;
}

.emailForm {
  padding: 0 1rem;
}

.emailForm input {
  padding: 1rem;
  font-size: 2rem;
  display: block;
  margin-bottom: 1rem;
}

.historicalData {
  margin: 1rem;
  font-size: 1rem;
}

@media all and (min-width: 480px) {
  .historicalData {
    font-size: 1.5rem;
  }
}

.historicalData .group {
  margin: 0;
  text-align:center;
}

.historicalData table {
  border-collapse: collapse;
  display: inline-block;
  vertical-align: top;
  text-align:left;
}

.historicalData table th {
  font-weight: bold;
  font-size: 16px;
}

.historicalData table th[data-shortname] {
  cursor:pointer;
}

.historicalData table td, .historicalData table th {
  border: 1px solid #888;
  padding: 1rem;
}

section[data-backlink] {
  font-size: 1.6rem;
  margin-bottom: 1rem;
  font-weight: bold;
  text-align: center;
  text-transform: uppercase;
}

section[data-backlink="indicators"] li:not([data-action="add"]) {
  border: 2px dashed #888;
}

section[data-backlink] li, li[data-backlink="tradleRules"] {
  cursor: pointer;
  border: 0;
  border-radius: 1rem;
  background: rgba(255, 255, 255, 0.4);
/*

  text-align: center;
  font-weight: bold;
  font-size: 1.6rem;
  */
}

.drawer-tab-left {
  border-radius: 0 1rem 1rem 0;
}

a[data-backlink] {
  font-size: 2.5rem;
}

@media all and (min-width: 600px) {
  a[data-backlink] {
    font-size: 3.5rem;
  }
}

#cpView li[data-backlink="tradleRules"] {
  margin-bottom:0;
}

section[data-backlink] li:last-child {
  margin-bottom: 0
}

.tradleFeed {
  text-decoration:none;
  font-weight: 100;
  font-size:1.4rem;
}

.slider {
  overflow: hidden;
  max-height: 0px;
  -webkit-transition: 0.3s all ease-in-out;
     -moz-transition: 0.3s all ease-in-out;
      -ms-transition: 0.3s all ease-in-out;
          transition: 0.3s all ease-in-out;
}

.slider.slider-active {
  max-height: 2000px;
}

@media all and (max-width: 480px) {
  .slider.slider-active {
    max-height: 4000px;
  }
}
/* ... */

